<?xml version="1.0"?>
<package>
  <name>but_imu_odom</name>
  <version>0.0.0</version>
  <description>ROS nodes for odometry estimation from IMU meassurements</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="ivelas@fit.vutbr.cz">Martin Velas</maintainer>

  <license>LGPL</license>

  <!-- <url type="website">http://wiki.ros.org/but_velodyne_odom</url> -->
  <url type="repository">https://github.com/robofit/but_velodyne</url>


  <author email="ivelas@fit.vutbr.cz">Martin Velas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  
</package>
